--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </h1>
         <p class="text-2xl opacity-90 mb-1">Total geral de atendimentos 1º Semestre</p>
         <p class="text-lg opacity-80">Dashboard de Análise de Dados</p>
+        <p class="text-lg opacity-80">Painél craido por: Ana P. A. Silva/Suporte Sistema Vivver/Distrito Sanitário Eldorado</p>
     </div>
 
     <!-- Total Atendimentos -->
