--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             Distrito Sanitário Eldorado
         </h1>
         <p class="text-2xl opacity-90 mb-1">Total geral de atendimentos 1º Semestre/2025</p>
-        <p class="text-lg opacity-80">Dashboard de Análise de Dados</p>
-        <p class="text-lg opacity-80">Painél criado por: Ana P. A. Silva/Suporte Sistema Vivver/Distrito Sanitário Eldorado</p>
+        <p class="text-lg opacity-80 mb-2">Dashboard de Análise de Dados</p>
+        <p class="text-sm opacity-70">Painel criado por: Ana P. A. Silva/Suporte Sistema Vivver/Distrito Sanitário Eldorado</p>
     </div>
 
     <!-- Total Atendimentos -->
@@ -47,18 +47,24 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
             <!-- Filtro por Unidade -->
             <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">Unidade de Saúde</label>
-                <select id="filtroUnidade" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm">
-                    <option value="">Todas as Unidades</option>
-                </select>
+                <label class="block text-sm font-semibold text-gray-700 mb-2">Unidade de Saúde (Múltipla Seleção)</label>
+                <div class="border border-gray-300 rounded-lg p-2 h-32 overflow-y-auto bg-white">
+                    <div id="checkboxUnidades" class="space-y-1">
+                        <!-- Checkboxes serão inseridos via JavaScript -->
+                    </div>
+                </div>
+                <small class="text-gray-500 text-xs mt-1 block">Clique nas caixinhas para selecionar múltiplos itens</small>
             </div>
 
             <!-- Filtro por CBO -->
             <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">CBO (Profissão)</label>
-                <select id="filtroCBO" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm">
-                    <option value="">Todos os CBOs</option>
-                </select>
+                <label class="block text-sm font-semibold text-gray-700 mb-2">CBO (Profissão) - Múltipla Seleção</label>
+                <div class="border border-gray-300 rounded-lg p-2 h-32 overflow-y-auto bg-white">
+                    <div id="checkboxCBOs" class="space-y-1">
+                        <!-- Checkboxes serão inseridos via JavaScript -->
+                    </div>
+                </div>
+                <small class="text-gray-500 text-xs mt-1 block">Clique nas caixinhas para selecionar múltiplos itens</small>
             </div>
 
             <!-- Filtro por Mês -->
@@ -80,6 +86,10 @@
                 <button id="btnAtualizar" class="filter-btn bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-all duration-300 text-sm">
                     <i class="fas fa-sync-alt mr-2"></i>
                     Atualizar
+                </button>
+                <button id="btnLimpar" class="filter-btn bg-orange-600 text-white px-4 py-2 rounded-lg hover:bg-orange-700 transition-all duration-300 text-sm">
+                    <i class="fas fa-eraser mr-2"></i>
+                    Limpar Filtros
                 </button>
                 <button id="btnDownload" class="filter-btn bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-all duration-300 text-sm">
                     <i class="fas fa-download mr-2"></i>
@@ -114,14 +124,24 @@
         </div>
     </div>
 
-    <!-- Gráfico CBO - Largura Total -->
+    <!-- Tabela CBO - Largura Total -->
     <div class="bg-white rounded-2xl p-6 card-shadow">
         <h3 class="text-xl font-bold text-gray-800 mb-4">
             <i class="fas fa-user-md mr-3 text-purple-500"></i>
             Total de Atendimentos por CBO (Categoria Profissional)
         </h3>
-        <div class="chart-container-large">
-            <canvas id="chartCBOs"></canvas>
+        <div class="overflow-x-auto">
+            <table id="tabelaCBOs" class="w-full table-auto">
+                <thead>
+                    <tr class="bg-gray-100">
+                        <th class="px-4 py-3 text-left font-bold text-gray-700">CBO (Categoria Profissional)</th>
+                        <th class="px-4 py-3 text-center font-bold text-gray-700">Total de Atendimentos</th>
+                    </tr>
+                </thead>
+                <tbody id="corpoTabelaCBOs">
+                    <!-- Dados serão inseridos via JavaScript -->
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
@@ -129,4 +149,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
