--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="totalAtendimentos" class="text-4xl font-extrabold mb-2 value-text">
             --
         </div>
-        <div class="text-base opacity-90 period-text">Janeiro a Junho 2025</div>
+        </div>
     </div>
 
     <!-- Filtros -->
