--- a/index.html
+++ b/index.html
@@ -133,10 +133,7 @@
         <div class="overflow-x-auto">
             <table id="tabelaCBOs" class="w-full table-auto">
                 <thead>
-                    <tr class="bg-gray-100">
-                        <th class="px-4 py-3 text-left font-bold text-gray-700">CBO (Categoria Profissional)</th>
-                        <th class="px-4 py-3 text-center font-bold text-gray-700">Total de Atendimentos</th>
-                    </tr>
+                    <!-- Cabeçalhos serão inseridos dinamicamente via JavaScript -->
                 </thead>
                 <tbody id="corpoTabelaCBOs">
                     <!-- Dados serão inseridos via JavaScript -->
@@ -146,6 +143,6 @@
     </div>
 </div>
 
-<script src="script.js"></script>
+<script src="script_modificado.js"></script>
 </body>
 </html>
