--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="totalAtendimentos" class="text-4xl font-extrabold mb-2 value-text">
             --
         </div>
-        </div>
+        <div class="text-base opacity-90 period-text">Janeiro a Junho 2025</div>
     </div>
 
     <!-- Filtros -->
@@ -133,7 +133,10 @@
         <div class="overflow-x-auto">
             <table id="tabelaCBOs" class="w-full table-auto">
                 <thead>
-                    <!-- Cabeçalhos serão inseridos dinamicamente via JavaScript -->
+                    <tr class="bg-gray-100">
+                        <th class="px-4 py-3 text-left font-bold text-gray-700">CBO (Categoria Profissional)</th>
+                        <th class="px-4 py-3 text-center font-bold text-gray-700">Total de Atendimentos</th>
+                    </tr>
                 </thead>
                 <tbody id="corpoTabelaCBOs">
                     <!-- Dados serão inseridos via JavaScript -->
@@ -143,6 +146,6 @@
     </div>
 </div>
 
-<script src="script_modificado.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
