--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="totalAtendimentos" class="text-4xl font-extrabold mb-2 value-text">
             --
         </div>
-        </div>
+        <div class="text-base opacity-90 period-text">Janeiro a Junho 2025</div>
     </div>
 
     <!-- Filtros -->
@@ -45,6 +45,20 @@
         </h3>
         
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
+            <!-- Filtro por Mês -->
+            <div>
+                <label class="block text-sm font-semibold text-gray-700 mb-2">Mês</label>
+                <select id="filtroMes" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm">
+                    <option value="">Todos os Meses</option>
+                    <option value="jan">Janeiro 2025</option>
+                    <option value="fev">Fevereiro 2025</option>
+                    <option value="mar">Março 2025</option>
+                    <option value="abr">Abril 2025</option>
+                    <option value="mai">Maio 2025</option>
+                    <option value="jun">Junho 2025</option>
+                </select>
+            </div>
+
             <!-- Filtro por Unidade -->
             <div>
                 <label class="block text-sm font-semibold text-gray-700 mb-2">Unidade de Saúde (Múltipla Seleção)</label>
@@ -65,20 +79,6 @@
                     </div>
                 </div>
                 <small class="text-gray-500 text-xs mt-1 block">Clique nas caixinhas para selecionar múltiplos itens</small>
-            </div>
-
-            <!-- Filtro por Mês -->
-            <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">Mês</label>
-                <select id="filtroMes" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm">
-                    <option value="">Todos os Meses</option>
-                    <option value="jan">Janeiro 2025</option>
-                    <option value="fev">Fevereiro 2025</option>
-                    <option value="mar">Março 2025</option>
-                    <option value="abr">Abril 2025</option>
-                    <option value="mai">Maio 2025</option>
-                    <option value="jun">Junho 2025</option>
-                </select>
             </div>
 
             <!-- Botões de Ação -->
@@ -143,7 +143,6 @@
     </div>
 </div>
 
-<script src="script_modificado.js"></script>
+<script src="script_reintegrated.js"></script>
 </body>
 </html>
-
