--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <!-- Filtro por Unidade -->
             <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">Unidade de Saúde (Múltipla Seleção)</label>
+                <label class="block text-sm font-semibold text-gray-700 mb-2">Unidade de Saúde (Múltipla Seleção )</label>
                 <div class="border border-gray-300 rounded-lg p-2 h-32 overflow-y-auto bg-white">
                     <div id="checkboxUnidades" class="space-y-1">
                         <!-- Checkboxes serão inseridos via JavaScript -->
@@ -143,6 +143,6 @@
     </div>
 </div>
 
-<script src="script_reintegrated.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
