--- a/index.html
+++ b/index.html
@@ -4,145 +4,161 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distrito Sanitário Eldorado</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        .card-shadow {
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        }
+        .chart-container {
+            position: relative;
+            height: 400px;
+        }
+        .filter-btn {
+            transition: all 0.3s ease;
+        }
+        .filter-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        @media print {
+            .no-print {
+                display: none !important;
+            }
+        }
+    </style>
 </head>
-<body class="bg-gray-50 min-h-screen">
-
-<div class="container mx-auto px-4 py-6">
+<body class="bg-gray-100 min-h-screen">
     <!-- Header -->
-    <div class="gradient-bg text-white text-center py-8 rounded-2xl mb-8 card-shadow">
-        <h1 class="text-4xl font-bold mb-2">
-            <i class="fas fa-hospital-alt mr-3"></i>
-            Distrito Sanitário Eldorado
-        </h1>
-        <p class="text-2xl opacity-90 mb-1">Total geral de atendimentos 1º Semestre/2025</p>
-        <p class="text-lg opacity-80 mb-2">Dashboard de Análise de Dados</p>
-        <p class="text-sm opacity-70">Painel criado por: Ana P. A. Silva/Suporte Sistema Vivver/Distrito Sanitário Eldorado</p>
+    <div class="bg-gradient-to-r from-blue-600 to-blue-800 text-white p-8 text-center">
+        <div class="flex items-center justify-center mb-4">
+            <i class="fas fa-hospital-alt text-4xl mr-4"></i>
+            <h1 class="text-4xl font-bold">Distrito Sanitário Eldorado</h1>
+        </div>
+        <h2 class="text-xl">Total geral de atendimentos 1º Semestre/2025</h2>
+        <p class="text-lg mt-2">Dashboard de Análise de Dados</p>
+        <p class="text-sm mt-1">Painel criado por: Ana P. A. Silva/Suporte Sistema Viver/Distrito Sanitário Eldorado</p>
     </div>
 
-    <!-- Total Atendimentos -->
-    <div class="total-display">
-        <div class="text-2xl mb-2 title-text">
-            <i class="fas fa-users mr-3"></i>
-            Total de Atendimentos Registrados
-        </div>
-        <div id="totalAtendimentos" class="text-4xl font-extrabold mb-2 value-text">
-            --
-        </div>
-        <div class="text-base opacity-90 period-text">Janeiro a Junho 2025</div>
-    </div>
-
-    <!-- Filtros -->
-    <div class="bg-white rounded-2xl p-6 mb-8 card-shadow no-print">
-        <h3 class="text-xl font-bold text-gray-800 mb-4">
-            <i class="fas fa-filter mr-3 text-blue-600"></i>
-            Filtros e Controles
-        </h3>
-        
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
-            <!-- Filtro por Mês -->
-            <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">Mês</label>
-                <select id="filtroMes" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm">
-                    <option value="">Todos os Meses</option>
-                    <option value="jan">Janeiro 2025</option>
-                    <option value="fev">Fevereiro 2025</option>
-                    <option value="mar">Março 2025</option>
-                    <option value="abr">Abril 2025</option>
-                    <option value="mai">Maio 2025</option>
-                    <option value="jun">Junho 2025</option>
-                </select>
+    <!-- Total de Atendimentos -->
+    <div class="container mx-auto px-4 py-8">
+        <div class="bg-gradient-to-r from-cyan-400 to-cyan-600 text-white rounded-2xl p-8 mb-8 text-center card-shadow">
+            <div class="flex items-center justify-center mb-4">
+                <i class="fas fa-users text-3xl mr-4"></i>
+                <h2 class="text-3xl font-bold">Total de Atendimentos Registrados</h2>
             </div>
+            <div class="text-6xl font-bold mb-2" id="totalAtendimentos">--</div>
+            <p class="text-xl">Janeiro a junho 2025</p>
+        </div>
 
-            <!-- Filtro por Unidade -->
-            <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">Unidade de Saúde (Múltipla Seleção)</label>
-                <div class="border border-gray-300 rounded-lg p-2 h-32 overflow-y-auto bg-white">
-                    <div id="checkboxUnidades" class="space-y-1">
-                        <!-- Checkboxes serão inseridos via JavaScript -->
-                    </div>
+        <!-- Filtros -->
+        <div class="bg-white rounded-2xl p-6 mb-8 card-shadow no-print">
+            <h3 class="text-xl font-bold text-gray-800 mb-4">
+                <i class="fas fa-filter mr-3 text-blue-600"></i>
+                Filtros e Controles
+            </h3>
+            
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
+                <!-- Filtro por Mês -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">Mês</label>
+                    <select id="filtroMes" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent text-sm">
+                        <option value="">Todos os Meses</option>
+                        <option value="jan">Janeiro 2025</option>
+                        <option value="fev">Fevereiro 2025</option>
+                        <option value="mar">Março 2025</option>
+                        <option value="abr">Abril 2025</option>
+                        <option value="mai">Maio 2025</option>
+                        <option value="jun">Junho 2025</option>
+                    </select>
                 </div>
-                <small class="text-gray-500 text-xs mt-1 block">Clique nas caixinhas para selecionar múltiplos itens</small>
-            </div>
 
-            <!-- Filtro por CBO -->
-            <div>
-                <label class="block text-sm font-semibold text-gray-700 mb-2">CBO (Profissão) - Múltipla Seleção</label>
-                <div class="border border-gray-300 rounded-lg p-2 h-32 overflow-y-auto bg-white">
-                    <div id="checkboxCBOs" class="space-y-1">
-                        <!-- Checkboxes serão inseridos via JavaScript -->
+                <!-- Filtro por Unidade -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">Unidade de Saúde (Múltipla Seleção)</label>
+                    <div class="border border-gray-300 rounded-lg p-2 h-32 overflow-y-auto bg-white">
+                        <div id="checkboxUnidades" class="space-y-1">
+                            <!-- Checkboxes serão inseridos via JavaScript -->
+                        </div>
                     </div>
+                    <small class="text-gray-500 text-xs mt-1 block">Clique nas caixinhas para selecionar múltiplos itens</small>
                 </div>
-                <small class="text-gray-500 text-xs mt-1 block">Clique nas caixinhas para selecionar múltiplos itens</small>
-            </div>
 
-            <!-- Botões de Ação -->
-            <div class="flex flex-col gap-2">
-                <button id="btnAtualizar" class="filter-btn bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-all duration-300 text-sm">
-                    <i class="fas fa-sync-alt mr-2"></i>
-                    Atualizar
-                </button>
-                <button id="btnLimpar" class="filter-btn bg-orange-600 text-white px-4 py-2 rounded-lg hover:bg-orange-700 transition-all duration-300 text-sm">
-                    <i class="fas fa-eraser mr-2"></i>
-                    Limpar Filtros
-                </button>
-                <button id="btnDownload" class="filter-btn bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-all duration-300 text-sm">
-                    <i class="fas fa-download mr-2"></i>
-                    Excel
-                </button>
+                <!-- Filtro por CBO -->
+                <div>
+                    <label class="block text-sm font-semibold text-gray-700 mb-2">CBO (Profissão) - Múltipla Seleção</label>
+                    <div class="border border-gray-300 rounded-lg p-2 h-32 overflow-y-auto bg-white">
+                        <div id="checkboxCBOs" class="space-y-1">
+                            <!-- Checkboxes serão inseridos via JavaScript -->
+                        </div>
+                    </div>
+                    <small class="text-gray-500 text-xs mt-1 block">Clique nas caixinhas para selecionar múltiplos itens</small>
+                </div>
+
+                <!-- Botões de Ação -->
+                <div class="flex flex-col gap-2">
+                    <button id="btnAtualizar" class="filter-btn bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition-all duration-300 text-sm">
+                        <i class="fas fa-sync-alt mr-2"></i>
+                        Atualizar
+                    </button>
+                    <button id="btnLimpar" class="filter-btn bg-orange-600 text-white px-4 py-2 rounded-lg hover:bg-orange-700 transition-all duration-300 text-sm">
+                        <i class="fas fa-eraser mr-2"></i>
+                        Limpar Filtros
+                    </button>
+                    <button id="btnDownload" class="filter-btn bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-all duration-300 text-sm">
+                        <i class="fas fa-download mr-2"></i>
+                        Excel
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Gráficos -->
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-8">
-        <!-- Ranking por Unidade -->
+        <!-- Gráficos -->
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-8">
+            <!-- Ranking por Unidade -->
+            <div class="bg-white rounded-2xl p-6 card-shadow">
+                <h3 class="text-xl font-bold text-gray-800 mb-4">
+                    <i class="fas fa-trophy mr-3 text-yellow-500"></i>
+                    Top 10 Unidades - Atendimentos
+                </h3>
+                <div class="chart-container">
+                    <canvas id="chartUnidades"></canvas>
+                </div>
+            </div>
+
+            <!-- Total por Mês -->
+            <div class="bg-white rounded-2xl p-6 card-shadow">
+                <h3 class="text-xl font-bold text-gray-800 mb-4">
+                    <i class="fas fa-calendar-alt mr-3 text-green-500"></i>
+                    Atendimentos por Mês
+                </h3>
+                <div class="chart-container">
+                    <canvas id="chartMeses"></canvas>
+                </div>
+            </div>
+        </div>
+
+        <!-- Tabela CBO - Largura Total -->
         <div class="bg-white rounded-2xl p-6 card-shadow">
             <h3 class="text-xl font-bold text-gray-800 mb-4">
-                <i class="fas fa-trophy mr-3 text-yellow-500"></i>
-                Top 10 Unidades - Atendimentos
+                <i class="fas fa-user-md mr-3 text-purple-500"></i>
+                Total de Atendimentos por CBO (Categoria Profissional)
             </h3>
-            <div class="chart-container">
-                <canvas id="chartUnidades"></canvas>
-            </div>
-        </div>
-
-        <!-- Total por Mês -->
-        <div class="bg-white rounded-2xl p-6 card-shadow">
-            <h3 class="text-xl font-bold text-gray-800 mb-4">
-                <i class="fas fa-calendar-alt mr-3 text-green-500"></i>
-                Atendimentos por Mês
-            </h3>
-            <div class="chart-container">
-                <canvas id="chartMeses"></canvas>
+            <div class="overflow-x-auto">
+                <table id="tabelaCBOs" class="w-full table-auto">
+                    <thead>
+                        <!-- Cabeçalhos serão inseridos dinamicamente via JavaScript -->
+                    </thead>
+                    <tbody id="corpoTabelaCBOs">
+                        <!-- Dados serão inseridos via JavaScript -->
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 
-    <!-- Tabela CBO - Largura Total -->
-    <div class="bg-white rounded-2xl p-6 card-shadow">
-        <h3 class="text-xl font-bold text-gray-800 mb-4">
-            <i class="fas fa-user-md mr-3 text-purple-500"></i>
-            Total de Atendimentos por CBO (Categoria Profissional)
-        </h3>
-        <div class="overflow-x-auto">
-            <table id="tabelaCBOs" class="w-full table-auto">
-                <thead>
-                    <!-- Cabeçalhos serão inseridos dinamicamente via JavaScript -->
-                </thead>
-                <tbody id="corpoTabelaCBOs">
-                    <!-- Dados serão inseridos via JavaScript -->
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-
-<script src="script_reintegrated.js"></script>
+    <script src="script_reintegrated.js"></script>
 </body>
 </html>
