--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <!-- Header -->
         <div class="text-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800 mb-2">Distrito Sanitário Eldorado</h1>
-            <h2 class="text-xl text-gray-600">Registros de atendimentos geral_Vivver</h2>
+            <h2 class="text-xl text-gray-600">Registros de atendimentos Geral</h2>
+            <h3 class="text-xl text-gray-600">Pagina criada por Ana P. A. Silva/Suporte Vivver/Distrito Eldorado</h3>
         </div>
 
         <!-- Filtros -->
