--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body class="bg-gray-50 min-h-screen">
     <div class="container mx-auto px-4 py-6">
         <!-- Header -->
-        <div class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-800 mb-2">Distrito Sanitário Eldorado</h1>
-            <h2 class="text-xl text-gray-600">Registros de atendimentos Geral</h2>
-            <h3 class="text-xl text-gray-600">1º Semestre/2025</h3>
+        <div class="header-container text-center mb-8 py-8 rounded-lg">
+            <h1 class="text-4xl font-bold text-white mb-2">Distrito Sanitário Eldorado</h1>
+            <h2 class="text-xl text-blue-100">Registros de atendimentos Geral</h2> 
+            <h2 class="text-xl text-blue-100">1º Semestre/2025</h2>
         </div>
 
         <!-- Filtros -->
@@ -96,4 +96,3 @@
     <script src="script_reintegrated.js"></script>
 </body>
 </html>
-
