--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="bg-gray-50 min-h-screen">
-    <div class="container mx-auto px-4 py-6">
+    <div class="container mx-auto px-4 py-6 max-w-7xl">
         <!-- Header -->
-        <div class="header-container text-center mb-8 py-8 rounded-lg">
-            <h1 class="text-4xl font-bold text-white mb-2">Distrito Sanitário Eldorado</h1>
-            <h2 class="text-xl text-blue-100">Registros de atendimentos Geral</h2> 
-            <h2 class="text-xl text-blue-100">1º Semestre/2025</h2>
+        <div class="header-bg text-center mb-8 py-8 rounded-lg text-white">
+            <h1 class="text-4xl font-bold header-text-shadow mb-2">Distrito Sanitário Eldorado</h1>
+            <h2 class="text-xl mb-1 opacity-90">Registros de atendimentos Geral</h2> 
+            <h2 class="text-xl opacity-90">1º Semestre/2025</h2>
         </div>
 
         <!-- Filtros -->
         <div class="bg-white rounded-lg shadow-md p-6 mb-6">
             <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                <i class="fas fa-filter mr-2"></i>Filtros
+                <i class="fas fa-filter mr-2 text-blue-600"></i>Filtros
             </h3>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+            <div class="filter-grid">
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">Mês</label>
-                    <select id="mesFilter" class="w-full p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                    <select id="mesFilter" class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                         <option value="">Todos os meses</option>
                         <option value="jan./25">Janeiro 2025</option>
                         <option value="fev./25">Fevereiro 2025</option>
@@ -38,13 +38,13 @@
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">Unidade de Saúde</label>
-                    <select id="unidadeFilter" class="w-full p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                    <select id="unidadeFilter" class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                         <option value="">Todas as unidades</option>
                     </select>
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">CBO</label>
-                    <select id="cboFilter" class="w-full p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+                    <select id="cboFilter" class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                         <option value="">Todos os CBOs</option>
                     </select>
                 </div>
@@ -52,13 +52,13 @@
         </div>
 
         <!-- Gráficos -->
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
+        <div class="dashboard-grid mb-6">
             <!-- Gráfico de Barras -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-chart-bar mr-2"></i>Total por Unidade de Saúde
+                    <i class="fas fa-chart-bar mr-2 text-red-600"></i>Total por Unidade de Saúde
                 </h3>
-                <div class="chart-container">
+                <div class="chart-container-bar">
                     <canvas id="barChart"></canvas>
                 </div>
             </div>
@@ -66,7 +66,7 @@
             <!-- Gráfico de Rosca -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                    <i class="fas fa-chart-pie mr-2"></i>Distribuição por Mês
+                    <i class="fas fa-chart-pie mr-2 text-blue-600"></i>Distribuição por Mês
                 </h3>
                 <div class="chart-container">
                     <canvas id="doughnutChart"></canvas>
@@ -77,13 +77,13 @@
         <!-- Tabela -->
         <div class="bg-white rounded-lg shadow-md p-6">
             <h3 class="text-lg font-semibold text-gray-800 mb-4">
-                <i class="fas fa-table mr-2"></i>Detalhamento por CBO e Unidade
+                <i class="fas fa-table mr-2 text-green-600"></i>Detalhamento por CBO e Unidade
             </h3>
-            <div class="overflow-x-auto">
-                <table id="dataTable" class="min-w-full table-auto">
-                    <thead class="bg-gray-50">
+            <div class="table-container">
+                <table id="dataTable" class="min-w-full table-auto border-collapse">
+                    <thead class="bg-gray-50 sticky top-0">
                         <tr>
-                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">CBO</th>
+                            <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider border-b border-gray-200">CBO</th>
                         </tr>
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
