--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     
-    <!-- Seu Arquivo de Estilo -->
+    <!-- Seu Arquivo de Estilo (Caminho Corrigido ) -->
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body class="bg-gray-50 min-h-screen">
@@ -99,7 +99,7 @@
     <!-- Dependências de Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
-    <!-- Seu Arquivo de Script -->
+    <!-- Seu Arquivo de Script (Caminho Corrigido ) -->
     <script src="script_reintegrated.js"></script>
 </body>
 </html>
