--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body class="bg-gray-50 min-h-screen">
     <div class="container mx-auto px-4 py-6 max-w-7xl">
         <!-- Header -->
-        <div class="header-bg text-center mb-8 py-8 rounded-lg text-white">
-            <h1 class="text-4xl font-bold header-text-shadow mb-2">Distrito Sanitário Eldorado</h1>
-            <h2 class="text-xl mb-1 opacity-90">Registros de atendimentos Geral</h2> 
-            <h2 class="text-xl opacity-90">1º Semestre/2025</h2>
+        <div class="header-bg text-center mb-8 py-8 rounded-lg">
+            <h1 class="text-4xl font-bold header-text-shadow mb-2 text-white">Distrito Sanitário Eldorado</h1>
+            <h2 class="text-xl mb-1 opacity-90 text-white">Registros de atendimentos Geral</h2> 
+            <h2 class="text-xl opacity-90 text-white">1º Semestre/2025</h2>
         </div>
 
         <!-- Filtros -->
