--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             <!-- Assinatura -->
             <div class="absolute bottom-2 right-4 text-white text-xs opacity-75">
-                Página criada por Ana. P. A. Silva/Suporte Vivver/Distrito Sanitário Eldorado Matr. 201704
+                Página criada por Ana. P. A. Silva/Ref. Vivver/Distrito Sanitário Eldorado Matr. 201704
             </div>
         </div>
 
