--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <!-- Header -->
         <div class="header-bg-dark text-center mb-8 py-8 rounded-lg relative">
             <h1 class="text-4xl font-bold text-white mb-2">Distrito Sanitário Eldorado</h1>
-            <h2 class="text-xl mb-1 opacity-90 text-white">Registros de atendimentos Geral</h2> 
-            <h2 class="text-xl opacity-90 text-white">1º Semestre/2025</h2>
+            <h2 class="text-xl mb-1 opacity-90 text-white">Registros de atendimentos Geral 2025</h2> 
+            <h2 class="text-xl opacity-90 text-white">Diretora: Wandha Karine dos Santos</h2>
             
             <!-- Assinatura -->
             <div class="absolute bottom-2 right-4 text-white text-xs opacity-75">
