--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                                 <input type="checkbox" id="mes_jun" value="jun./25">
                                 <label for="mes_jun">Junho 2025</label>
                             </div>
+                            <div class="multiselect-option" data-value="jul./25">
+                                <input type="checkbox" id="mes_jul" value="jul./25">
+                                <label for="mes_jul">Julho 2025</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -162,4 +166,3 @@
     <script src="script_reintegrated.js"></script>
 </body>
 </html>
-
