--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                             <div class="multiselect-option" data-value="jun./25">
                                 <input type="checkbox" id="mes_jun" value="jun./25">
                                 <label for="mes_jun">Junho 2025</label>
+                                </div>
+                            <div class="multiselect-option" data-value="jul./25">
+                                <input type="checkbox" id="mes_jul" value="jul./25">
+                                <label for="mes_jun">Julho 2025</label>
                             </div>
                         </div>
                     </div>
