--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
                                 </div>
                             <div class="multiselect-option" data-value="jul./25">
                                 <input type="checkbox" id="mes_jul" value="jul./25">
-                                <label for="mes_jun">Julho 2025</label>
+                                <label for="mes_jul">Julho 2025</label>
+                                </div>
+                            <div class="multiselect-option" data-value="jul./25">
+                                <input type="checkbox" id="mes_jul" value="jul./25">
+                                <label for="mes_ago">Agosto 2025</label>
                             </div>
                         </div>
                     </div>
